// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#parse 1`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [],
      "id": "Main",
      "is": "Main",
      "isAnimated": false,
      "isBasic": true,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 2`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "Text",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 3,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Text",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "id": "Main",
      "is": "Main",
      "isAnimated": false,
      "isBasic": true,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 3`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "Before",
          "is": "Before",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 3,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Text",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "children": Array [
            Object {
              "animations": Object {},
              "id": "ImageInside",
              "is": "ImageInside",
              "isAnimated": false,
              "isBasic": true,
              "isColumn": false,
              "isGroup": false,
              "loc": Object {
                "end": Object {
                  "column": 0,
                  "line": 7,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "Image",
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 32,
                      "line": 6,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 6,
                    },
                  },
                  "name": "source",
                  "tags": Object {
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "https://image.com/file.jpg",
                },
              ],
              "scopes": Array [],
              "type": "Block",
            },
            Object {
              "animations": Object {},
              "children": Array [],
              "id": "VerticalInside",
              "is": "VerticalInside",
              "isAnimated": false,
              "isBasic": true,
              "isColumn": false,
              "isGroup": true,
              "isList": false,
              "isTable": false,
              "loc": Object {
                "end": Object {
                  "column": 0,
                  "line": 9,
                },
                "start": Object {
                  "column": 0,
                  "line": 8,
                },
              },
              "name": "Vertical",
              "properties": Array [],
              "scopes": Array [],
              "type": "Block",
            },
          ],
          "id": "Nested",
          "is": "Nested",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": true,
          "isList": false,
          "isTable": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 10,
            },
            "start": Object {
              "column": 0,
              "line": 4,
            },
          },
          "name": "Vertical",
          "properties": Array [],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "id": "After",
          "is": "After",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 16,
            },
            "start": Object {
              "column": 0,
              "line": 11,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 12,
                },
                "start": Object {
                  "column": 0,
                  "line": 12,
                },
              },
              "name": "text",
              "tags": Object {
                "validSlot": null,
              },
              "type": "Property",
              "value": "after",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 11,
                  "line": 13,
                },
                "start": Object {
                  "column": 0,
                  "line": 13,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "purple",
            },
          ],
          "scopes": Array [
            Object {
              "isLocal": false,
              "isSystem": true,
              "name": "when",
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 10,
                      "line": 14,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 14,
                    },
                  },
                  "name": "when",
                  "scope": "hover",
                  "slotName": "hover",
                  "tags": Object {
                    "scope": "<hover",
                    "shouldBeSlot": true,
                    "slot": true,
                    "validSlot": true,
                  },
                  "type": "Property",
                  "value": "hover",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 8,
                      "line": 15,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 15,
                    },
                  },
                  "name": "color",
                  "scope": "hover",
                  "tags": Object {
                    "style": true,
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "red",
                },
              ],
              "slotIsNot": false,
              "slotName": "hover",
              "value": "hover",
            },
          ],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "children": Array [],
          "id": "Last",
          "is": "Last",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": true,
          "isList": false,
          "isTable": false,
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 18,
            },
            "start": Object {
              "column": 0,
              "line": 17,
            },
          },
          "name": "Vertical",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 18,
                },
                "start": Object {
                  "column": 0,
                  "line": 18,
                },
              },
              "name": "backgroundColor",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "blue",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "id": "BlueButton",
      "is": "BlueButton",
      "isAnimated": false,
      "isBasic": true,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 18,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 4`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "A1",
          "is": "A1",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 4,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "red",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "id": "A2",
          "is": "A2",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 6,
            },
            "start": Object {
              "column": 0,
              "line": 5,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 6,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "white",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "id": "A",
      "is": "A",
      "isAnimated": false,
      "isBasic": true,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [
    Object {
      "line": "A Vertical ",
      "loc": Object {
        "start": Object {
          "line": 1,
        },
      },
      "type": "You have some spaces before or after this line. Clean them up.",
    },
    Object {
      "line": "A2 Text    ",
      "loc": Object {
        "start": Object {
          "line": 5,
        },
      },
      "type": "You have some spaces before or after this line. Clean them up.",
    },
  ],
}
`;

exports[`#parse 5`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [
    Object {
      "defaultValue": false,
      "name": "backgroundColor",
      "type": "string",
    },
    Object {
      "defaultValue": false,
      "name": "onClick",
      "type": "function",
    },
    Object {
      "defaultValue": "red",
      "name": "color",
      "type": "string",
    },
    Object {
      "defaultValue": 10,
      "name": "marginLeft",
      "type": "number",
    },
    Object {
      "defaultValue": "This is the title",
      "name": "title",
      "type": "string",
    },
    Object {
      "defaultValue": false,
      "name": "onFocus",
      "type": "function",
    },
    Object {
      "defaultValue": false,
      "name": "from",
      "type": "array",
    },
  ],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "Title",
          "is": "Title",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 8,
            },
            "start": Object {
              "column": 0,
              "line": 4,
            },
          },
          "maybeAnimated": true,
          "name": "Text",
          "properties": Array [
            Object {
              "defaultValue": "red",
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "color",
              "slotName": "",
              "tags": Object {
                "slot": true,
                "style": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.color",
            },
            Object {
              "defaultValue": 10,
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 6,
                },
              },
              "name": "marginLeft",
              "slotName": "",
              "tags": Object {
                "slot": true,
                "style": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.marginLeft",
            },
            Object {
              "defaultValue": "This is the title",
              "loc": Object {
                "end": Object {
                  "column": 28,
                  "line": 7,
                },
                "start": Object {
                  "column": 0,
                  "line": 7,
                },
              },
              "name": "text",
              "slotName": "title",
              "tags": Object {
                "slot": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.title",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "id": "CaptureText",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 0,
              "line": 11,
            },
            "start": Object {
              "column": 0,
              "line": 9,
            },
          },
          "name": "CaptureText",
          "properties": Array [
            Object {
              "defaultValue": "",
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 10,
                },
                "start": Object {
                  "column": 0,
                  "line": 10,
                },
              },
              "name": "onFocus",
              "slotName": "",
              "tags": Object {
                "shouldBeSlot": true,
                "slot": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.onFocus",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
        Object {
          "animations": Object {},
          "children": Array [
            Object {
              "animations": Object {},
              "children": Array [],
              "childrenProxyMap": null,
              "id": "Stuff",
              "isAnimated": false,
              "isBasic": false,
              "isColumn": false,
              "isGroup": true,
              "isList": false,
              "isTable": false,
              "loc": Object {
                "end": Object {
                  "column": 4,
                  "line": 14,
                },
                "start": Object {
                  "column": 0,
                  "line": 14,
                },
              },
              "name": "Stuff",
              "properties": Array [],
              "scopes": Array [],
              "type": "Block",
            },
          ],
          "id": "List",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": true,
          "isList": true,
          "isTable": false,
          "loc": Object {
            "end": Object {
              "column": 4,
              "line": 14,
            },
            "start": Object {
              "column": 0,
              "line": 12,
            },
          },
          "name": "List",
          "properties": Array [
            Object {
              "defaultValue": "",
              "loc": Object {
                "end": Object {
                  "column": 5,
                  "line": 13,
                },
                "start": Object {
                  "column": 0,
                  "line": 13,
                },
              },
              "name": "from",
              "slotName": "",
              "tags": Object {
                "shouldBeSlot": true,
                "slot": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.from",
            },
          ],
          "scopes": Array [],
          "type": "Block",
        },
      ],
      "id": "Vertical",
      "isAnimated": false,
      "isBasic": true,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 14,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "maybeAnimated": true,
      "name": "Vertical",
      "properties": Array [
        Object {
          "defaultValue": false,
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "backgroundColor",
          "slotName": "backgroundColor",
          "tags": Object {
            "slot": true,
            "style": true,
            "validSlot": true,
          },
          "type": "Property",
          "value": "props.backgroundColor",
        },
        Object {
          "defaultValue": "onClick",
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 3,
            },
            "start": Object {
              "column": 0,
              "line": 3,
            },
          },
          "name": "onClick",
          "slotName": "onClick",
          "tags": Object {
            "shouldBeSlot": true,
            "slot": true,
            "validSlot": true,
          },
          "type": "Property",
          "value": "props.onClick",
        },
      ],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [
    Object {
      "line": "backgroundColor <backgroundColor",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "type": "Add a default value to \\"backgroundColor\\" like: \\"backgroundColor <backgroundColor default value\\"",
    },
  ],
}
`;

exports[`#parse 6`] = `
Object {
  "fonts": Array [],
  "locals": Array [
    "es",
  ],
  "slots": Array [],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "id": "Text",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": false,
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 5,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "name": "Text",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "name": "text",
              "tags": Object {
                "validSlot": null,
              },
              "type": "Property",
              "value": "hi",
            },
          ],
          "scopes": Array [
            Object {
              "isLocal": true,
              "isSystem": false,
              "name": "when",
              "properties": Array [
                Object {
                  "defaultValue": "es",
                  "loc": Object {
                    "end": Object {
                      "column": 7,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 4,
                    },
                  },
                  "name": "when",
                  "scope": "es",
                  "slotName": "es",
                  "tags": Object {
                    "scope": "<es",
                    "shouldBeSlot": true,
                    "slot": true,
                    "validSlot": true,
                  },
                  "type": "Property",
                  "value": "props.es",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 8,
                      "line": 5,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 5,
                    },
                  },
                  "name": "text",
                  "scope": "es",
                  "tags": Object {
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "hola",
                },
              ],
              "slotIsNot": false,
              "slotName": "es",
              "value": "es",
            },
          ],
          "type": "Block",
        },
      ],
      "id": "Locals",
      "is": "Locals",
      "isAnimated": false,
      "isBasic": true,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [],
}
`;

exports[`#parse 7`] = `
Object {
  "fonts": Array [],
  "locals": Array [],
  "slots": Array [
    Object {
      "defaultValue": false,
      "name": "marginTop",
      "type": "number",
    },
  ],
  "views": Array [
    Object {
      "animations": Object {},
      "children": Array [
        Object {
          "animations": Object {},
          "children": Array [],
          "id": "EmptyWhen",
          "is": "EmptyWhen",
          "isAnimated": false,
          "isBasic": true,
          "isColumn": false,
          "isGroup": true,
          "isList": false,
          "isTable": false,
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 10,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "maybeAnimated": true,
          "name": "Vertical",
          "properties": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "name": "color",
              "tags": Object {
                "style": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "blue",
            },
            Object {
              "defaultValue": false,
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 4,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "name": "marginTop",
              "slotName": "",
              "tags": Object {
                "slot": true,
                "style": true,
                "validSlot": true,
              },
              "type": "Property",
              "value": "props.marginTop",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 5,
                },
                "start": Object {
                  "column": 0,
                  "line": 5,
                },
              },
              "name": "border",
              "tags": Object {
                "unsupportedShorthand": true,
                "validSlot": null,
              },
              "type": "Property",
              "value": "1px solid red",
            },
          ],
          "scopes": Array [
            Object {
              "isLocal": false,
              "isSystem": false,
              "name": "when",
              "properties": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 3,
                      "line": 6,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 6,
                    },
                  },
                  "name": "when",
                  "scope": undefined,
                  "tags": Object {
                    "scope": "",
                    "shouldBeSlot": true,
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 8,
                      "line": 7,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 7,
                    },
                  },
                  "name": "color",
                  "scope": undefined,
                  "tags": Object {
                    "style": true,
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "red",
                },
              ],
              "slotIsNot": undefined,
              "slotName": undefined,
              "value": "props.when",
            },
            Object {
              "isLocal": false,
              "isSystem": false,
              "name": "when",
              "properties": Array [
                Object {
                  "defaultValue": "stuff",
                  "loc": Object {
                    "end": Object {
                      "column": 11,
                      "line": 8,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 8,
                    },
                  },
                  "name": "when",
                  "scope": "",
                  "slotName": "",
                  "tags": Object {
                    "scope": "stuff",
                    "shouldBeSlot": true,
                    "slot": true,
                    "validSlot": true,
                  },
                  "type": "Property",
                  "value": "props.when",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 9,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 9,
                    },
                  },
                  "name": "backgroundColor",
                  "scope": "",
                  "tags": Object {
                    "style": true,
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "purple",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 10,
                      "line": 10,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 10,
                    },
                  },
                  "name": "color",
                  "scope": "",
                  "tags": Object {
                    "style": true,
                    "validSlot": null,
                  },
                  "type": "Property",
                  "value": "green",
                },
              ],
              "slotIsNot": false,
              "slotName": "",
              "value": "props.when",
            },
          ],
          "type": "Block",
        },
      ],
      "id": "Warning",
      "is": "Warning",
      "isAnimated": false,
      "isBasic": true,
      "isColumn": false,
      "isGroup": true,
      "isList": false,
      "isTable": false,
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 10,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "name": "Vertical",
      "properties": Array [],
      "scopes": Array [],
      "type": "Block",
    },
  ],
  "warnings": Array [
    Object {
      "line": "marginTop <",
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 4,
        },
      },
      "type": "Add a default value to \\"marginTop\\" like: \\"marginTop < default value\\"",
    },
    Object {
      "line": "border 1px solid red",
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "type": "The shorthand border isn't supported. You need to expand it like:
borderWidth 1
borderStyle solid
borderColor red",
    },
    Object {
      "line": "when",
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 6,
        },
        "start": Object {
          "column": 0,
          "line": 6,
        },
      },
      "type": "This when has no condition assigned to it. Add one like: \\"when <isCondition\\"",
    },
    Object {
      "line": "backgroundColor purple",
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 9,
        },
        "start": Object {
          "column": 0,
          "line": 9,
        },
      },
      "type": "You're missing a base prop for backgroundColor. Add it before all whens on the block.",
    },
  ],
}
`;
